--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <TextView
         android:id="@+id/textchangepassword"
@@ -29,16 +29,16 @@
         android:text="Change password"
         android:textColor="#ffffff"
         android:textSize="@dimen/_30ssp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="@dimen/_8sdp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/_8sdp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_8sdp"
         app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#BB000000"
         android:orientation="vertical"
@@ -48,7 +48,7 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/linearLayout2"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
 
         <EditText
@@ -84,15 +84,14 @@
 
     <Button
         android:id="@+id/btn_changepassword"
-        android:layout_width="368dp"
-        android:layout_height="84dp"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
         android:background="@color/colorAccent"
-        android:padding="@dimen/_20sdp"
         android:text="Confirm"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="0dp"
