--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <TextView
         android:id="@+id/textconfirmcode"
@@ -34,7 +34,7 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_8sdp"
         app:layout_constraintTop_toBottomOf="@+id/imageconfirm" />
 
     <TextView
@@ -46,16 +46,16 @@
         android:text="In order to continue. you must confirm your email address :"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_16ssp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="@dimen/_10sdp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/_10sdp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_8sdp"
         app:layout_constraintTop_toBottomOf="@+id/textconfirmcode" />
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#BB000000"
         android:orientation="vertical"
@@ -65,7 +65,7 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/linearLayout3"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@+id/textcontinueconfirm">
 
         <EditText
@@ -87,15 +87,14 @@
 
     <Button
         android:id="@+id/btn_continue"
-        android:layout_width="368dp"
-        android:layout_height="84dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_75sdp"
         android:background="@color/colorAccent"
-        android:padding="@dimen/_20sdp"
         android:text="Continue"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="0dp"
