--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,12 +9,10 @@
 
     <ImageView
         android:id="@+id/imagelogin"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,26 +25,21 @@
         android:layout_below="@+id/imagelogin"
         android:layout_gravity="center"
         android:layout_margin="@dimen/_20sdp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginBottom="@dimen/_24sdp"
         android:text="Get involved"
         android:textColor="#ffffff"
         android:textSize="@dimen/_30ssp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/imagelogin"
-        app:layout_constraintHorizontal_bias="0.502" />
+        app:layout_constraintTop_toBottomOf="@+id/imagelogin" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
@@ -89,9 +82,10 @@
         android:id="@+id/text_forget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
         android:text="Forget Passowrd"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_13ssp"
@@ -102,11 +96,10 @@
 
     <ImageButton
         android:id="@+id/btn_login"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/oragnecircal"
-        android:padding="@dimen/_20sdp"
         android:src="@drawable/download_right"
         app:layout_constraintBottom_toTopOf="@+id/txt_toregister"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -116,7 +109,7 @@
         android:id="@+id/txt_toregister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:gravity="center"
         android:text="Don't have ana accounts?Sign Up"
         android:textColor="@color/colorAccent"
