--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,21 +9,22 @@
 
     <ImageButton
         android:id="@+id/imageregister"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:layout_gravity="center"
         android:src="@drawable/camera"
-        android:layout_marginBottom="10dp"
+        android:background="@drawable/circle_shape"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#BB000000"
         android:orientation="vertical"
@@ -83,13 +84,13 @@
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="368dp"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_75sdp"
         android:background="@color/colorAccent"
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintBottom_toTopOf="@+id/txt_or"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -102,18 +103,18 @@
         android:text="Or"
         android:textColor="#ffffff"
         android:textSize="20sp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintBottom_toTopOf="@+id/btn_login_facebok"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btn_login_facebok"
-        android:layout_width="368dp"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_75sdp"
         android:background="@drawable/facebook"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
