--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -9,16 +9,14 @@
 
     <ImageView
         android:id="@+id/imageresetpassword"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/logo"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textforgetpassword"
@@ -26,14 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageresetpassword"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="Forget password"
         android:textColor="#ffffff"
         android:textSize="@dimen/_30ssp"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageresetpassword" />
 
     <TextView
@@ -44,37 +40,31 @@
         android:text="you can reset password."
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/_16ssp"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textforgetpassword" />
 
     <Button
         android:id="@+id/btn_resetpassword"
-        android:layout_width="368dp"
-        android:layout_height="72dp"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:background="@color/colorAccent"
         android:text="Request password reset"
         android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="0dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/_40sdp"
         android:background="#BB000000"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp"
