--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_in_item_home"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_160sdp"
-        android:padding="5dp"
-        android:clickable="true"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/logo" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/text_item_in_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/image_in_item_home"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="#BB000000"
-        android:padding="@dimen/_5sdp"
-        android:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/_12ssp" />
+        <ImageView
+            android:id="@+id/image_in_item_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:padding="@dimen/_5sdp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/text_item_in_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/rectangle_shape"
+            android:padding="@dimen/_10sdp"
+            android:text="hhhhhhhhhhhhhhhhhhhhhhhhh"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
