--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,6 @@
             app:layout_constraintVertical_bias="0.421"
             app:srcCompat="@drawable/profile_pic" />
 
-
         <TextView
             android:id="@+id/username_profile"
             android:layout_width="wrap_content"
@@ -41,7 +40,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:text="Rossy Loard"
             android:textSize="@dimen/_20ssp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,102 +50,155 @@
             app:layout_constraintTop_toBottomOf="@+id/image_profile"
             app:layout_constraintVertical_bias="1.0" />
 
-        <TextView
-            android:id="@+id/text_reviews_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/image_profile"
-            android:layout_marginRight="37dp"
-            android:layout_marginTop="16dp"
-            android:text="192k Reviews"
-            android:textSize="@dimen/_15ssp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/text_causes_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/image_profile"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="@dimen/_23sdp"
-            android:layout_marginTop="16dp"
-            android:text="268k My causes"
-            android:textSize="@dimen/_15ssp"
-            app:layout_constraintHorizontal_bias="0.115"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/text_reviews_profile"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <TextView
-            android:id="@+id/text_location_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/image_profile"
-            android:layout_marginBottom="31dp"
-            android:layout_marginRight="56dp"
-            android:layout_toEndOf="@+id/username_profile"
-            android:layout_toRightOf="@+id/username_profile"
-            android:text="Location"
-            android:textSize="@dimen/_15ssp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <TextView
-            android:id="@+id/text_history_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="31dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="97dp"
-            android:layout_toLeftOf="@+id/image_profile"
-            android:layout_toStartOf="@+id/image_profile"
-            android:text="History"
-            android:textSize="@dimen/_15ssp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.376"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/text_location_profile" />
-
         <Button
             android:id="@+id/btn_add_cause"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
             android:background="@drawable/add_cause"
-            app:layout_constraintBottom_toTopOf="@+id/text_location_profile"
-            app:layout_constraintHorizontal_bias="0.789"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.703"
             app:layout_constraintLeft_toRightOf="@+id/image_profile"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_reviews_profile"
-            app:layout_constraintVertical_bias="0.564" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_heart"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_centerVertical="true"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/like_heart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.296"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_profile"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/l1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="71dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/btn_add_cause"
+            app:layout_constraintLeft_toRightOf="@+id/image_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.389">
+
+            <TextView
+                android:id="@+id/text_reviews_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="192k Reviews" />
+
+            <ImageView
+                android:id="@+id/figure_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/figure_2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/l2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="64dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/btn_heart"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.389">
+
+            <TextView
+                android:id="@+id/text_causes_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="268k My causes" />
+
+            <ImageView
+                android:id="@+id/figure_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/figure_1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/l3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="71dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.428"
+            app:layout_constraintLeft_toRightOf="@+id/image_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/l1"
+            app:layout_constraintVertical_bias="0.723">
+
+            <ImageView
+                android:id="@+id/figure_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/figure_3" />
+
+            <TextView
+                android:id="@+id/text_location_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Location" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/l4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/like_heart"
-            app:layout_constraintBottom_toTopOf="@+id/text_history_profile"
-            app:layout_constraintHorizontal_bias="0.21"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.28"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_profile"
-            app:layout_constraintTop_toBottomOf="@+id/text_causes_profile"
-            app:layout_constraintVertical_bias="0.564" />
+            app:layout_constraintRight_toLeftOf="@+id/l3"
+            app:layout_constraintTop_toBottomOf="@+id/l2"
+            app:layout_constraintVertical_bias="0.723">
 
+            <ImageView
+                android:id="@+id/figure_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/figure4" />
+
+            <TextView
+                android:id="@+id/text_history_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="History" />
+
+        </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
     <RelativeLayout
