--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -11,8 +11,8 @@
 
         <ImageView
             android:id="@+id/image_in_item_home"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_150sdp"
             android:clickable="true"
             android:padding="@dimen/_5sdp"
             android:scaleType="fitXY"
