--- a/app/src/main/res/layout/activity_search_causes__people.xml
+++ b/app/src/main/res/layout/activity_search_causes__people.xml
@@ -98,9 +98,16 @@
         android:id="@+id/list_search_causes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_recent_search">
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_recent_search"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0">
 
     </ListView>
 </android.support.constraint.ConstraintLayout>
